Added image to the hello-worl-images

--- a/progress.html
+++ b/progress.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hello World</title>
+  </head>
 <body>
-
+  <img src="image/img_link_tree_template1_bio.jpg" alt="img_link_tree_template1_bio.jpg" style="height: 100px">
+ <h1>HI WORLD</h1>
 <h1>My First Heading</h1>
 
 <p>My first paragraph.</p>
+
+<p>My first Git tutorials</p>
+<p>A new line in our file</p>
 
 </body>
 </html>
