Added new image

--- a/progress.html
+++ b/progress.html
@@ -5,6 +5,8 @@
   </head>
 <body>
   <img src="image/img_link_tree_template1_bio.jpg" alt="img_link_tree_template1_bio.jpg" style="height: 100px">
+  <img src="image/img_link_tree_template1_bio.jpg" 
+alt="img_link_tree_template1_bio.jpg" style="height: 100px">
  <h1>HI WORLD</h1>
 <h1>My First Heading</h1>
 
