Added list of fruits

--- a/progress.html
+++ b/progress.html
@@ -13,7 +13,8 @@ alt="img_link_tree_template1_bio.jpg" style="height: 100px">
 <div>div element</div>
 <button>pull</button>
 <p>My first paragraph.</p>
-
+<li>Oranges</li>
+<li>Mangoes</li>
 <p>My first Git tutorials</p>
 <p>A new line in our file</p>
 
