Update progress.html checkbox added

--- a/progress.html
+++ b/progress.html
@@ -10,6 +10,7 @@
 alt="img_link_tree_template1_bio.jpg" style="height: 100px">
  <h1>HI WORLD</h1>
 <h1>My First Heading</h1>
+<input type:"checkbox">
 <div>div element</div>
 <button>pull</button>
 <p>My first paragraph.</p>
